<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2015 The CyanogenMod Project
	Copyright (C) 2017-2019 The LineageOS Project

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="shiftparts_title">ShiftOS Settings</string>

    <!-- Generic stuff used everywhere -->
    <string name="loading">Loading\u2026</string>
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="reset">Reset</string>
    <string name="advanced">Advanced</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="search_menu">Search settings</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>

    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
    <string name="summary_empty" translatable="false"></string>

    <!-- Button settings -->
    <string name="button_pref_title">Buttons</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_split_screen">Split screen</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_launch_title">Launch camera</string>
    <string name="camera_launch_summary">A longpress and release will launch camera</string>
    <string name="volbtn_music_controls_title">Control playback</string>
    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
    <string name="button_wake_title">Wake device</string>

    <!-- Power menu -->
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
    <string name="power_menu_lockdown_title">Lockdown</string>

    <string name="camera_double_tap_power_gesture_title">Press power button twice for camera</string>

    <!-- Description of setting that controls gesture to open camera by double tapping the power button [CHAR LIMIT=NONE] -->
    <string name="camera_double_tap_power_gesture_desc">Quickly open camera without unlocking your screen</string>

    <!-- Quick Torch -->
    <string name="gestures_power_key_torch">Quick torch</string>
    <string name="torch_long_press_power_gesture_title">Long press for torch</string>
    <string name="torch_long_press_power_gesture_desc">Activate the torch by long pressing the power button while the display is off</string>
    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>

    <string name="torch_long_press_power_timeout_never">Never</string>
    <string name="torch_long_press_power_timeout_1min">1 minute</string>
    <string name="torch_long_press_power_timeout_2min">2 minutes</string>
    <string name="torch_long_press_power_timeout_5min">5 minutes</string>
    <string name="torch_long_press_power_timeout_10min">10 minutes</string>

    <!-- Navigation Bar -->
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_bar_invert_layout_title">Invert navigation bar layout</string>

    <!-- Status bar -->
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>
    <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>

    <!-- Status bar - icons -->
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>

    <!-- Status bar - Clock -->
    <string name="status_bar_clock_title">Clock</string>

    <string name="status_bar_clock_show_seconds_title">Show seconds</string>
    <string name="status_bar_clock_show_seconds_summary">Show hours, minutes, and seconds</string>

    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>

    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>

    <!-- Status bar - Battery -->
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>

    <!-- Status bar - Battery percentage -->
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>

    <!-- Status bar - Brightness -->
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="status_bar_brightness_slider_title">Brightness slider</string>
    <string name="status_bar_brightness_slider_summary">Adjust brightness from the Quick Settings</string>
    <string name="status_bar_brightness_slider_auto_title">Auto brightness</string>
    <string name="status_bar_brightness_slider_auto_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_brightness_slider_show_never">Never show</string>
    <string name="status_bar_brightness_slider_show_expanded">Show when expanded</string>
    <string name="status_bar_brightness_slider_show_always">Show always</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>

    <!-- Status bar - Network Traffic -->
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_disable">Disabled</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units in the statusbar</string>
    <string name="network_traffic_disabled_clock">Network traffic disabled due to clock position</string>

    <!-- Display : Rotation  -->
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="display_rotation_title">Rotation settings</string>
    <string name="display_rotation_enabled">Auto-rotation is enabled</string>
    <string name="display_rotation_disabled">Auto-rotation is disabled</string>
    <string name="display_rotation_unit">degrees</string>
    <string name="display_lockscreen_rotation_title">Rotate lock screen</string>
    <string name="display_rotation_category_title">Rotation modes</string>
    <string name="display_rotation_0_title">0 degrees</string>
    <string name="display_rotation_90_title">90 degrees</string>
    <string name="display_rotation_180_title">180 degrees</string>
    <string name="display_rotation_270_title">270 degrees</string>

    <!-- Advanced mode -->
    <string name="advanced_title">Advanced</string>
    <string name="advanced_mode_title">Show more features</string>
    <string name="advanced_mode_description">Enable advanced features for power users to unlock more customization options and extra capabilities.</string>
</resources>
