<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:shift="http://schemas.android.com/apk/res/shiftos.platform"
        android:key="button_settings"
        android:title="@string/button_pref_title">

    <PreferenceCategory
        android:key="power_key"
        android:title="@string/hardware_keys_power_key_title" >

        <PreferenceScreen
            android:key="power_menu"
            android:title="@string/power_menu_title"
            android:fragment="com.shiftos.shiftparts.input.PowerMenuActions" />
        </PreferenceCategory>

    <PreferenceCategory
        android:key="navigation_bar_category"
        android:title="@string/navigation_bar_category">

        <shiftos.preference.SecureSettingSwitchPreference
            android:key="sysui_nav_bar_inverse"
            android:title="@string/navigation_bar_invert_layout_title"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="assist_key"
        android:title="@string/hardware_keys_assist_key_title" >

        <shiftos.preference.ShiftSystemSettingSwitchPreference
            android:key="assist_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="hardware_keys_assist_press"
            android:dialogTitle="@string/hardware_keys_short_press_title"
            android:title="@string/hardware_keys_short_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_assist_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="camera_key"
        android:title="@string/hardware_keys_camera_key_title">

        <shiftos.preference.ShiftSystemSettingSwitchPreference
            android:key="camera_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <shiftos.preference.ShiftSystemSettingSwitchPreference
            android:key="camera_sleep_on_release"
            android:title="@string/camera_sleep_on_release_title"
            android:summary="@string/camera_sleep_on_release_summary"
            android:defaultValue="false" />

        <shiftos.preference.ShiftSystemSettingSwitchPreference
            android:key="camera_launch"
            android:title="@string/camera_launch_title"
            android:summary="@string/camera_launch_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="volume_keys"
        android:title="@string/hardware_keys_volume_keys_title" >

        <shiftos.preference.ShiftSystemSettingSwitchPreference
            android:key="volume_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <shiftos.preference.ShiftSystemSettingSwitchPreference
            android:key="volbtn_music_controls"
            android:title="@string/volbtn_music_controls_title"
            android:summary="@string/volbtn_music_controls_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
